fixed error with components overlapping on homepage

--- a/client/src/pages/homepage/HomePage.css
+++ b/client/src/pages/homepage/HomePage.css
@@ -7,3 +7,9 @@
         height: auto !important;
     }    
 }
+
+@media(max-height: 750px){
+    .verticalHeight{
+        height: auto !important;
+    }
+}
